Change link color

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <section id="buttonSection">
                 <div id="buttonContainer">
                     <button>Create Account</button>
-                    <p>Already have an account? <a href="">Log in</a></p>
+                    <p>Already have an account? <a href="" id="userLink">Log in</a></p>
                 </div>
             </section>
         </form>
